# lostatus

./: .rustfmt.toml  Cargo.toml  README.md
src/: app.rs  bin.rs  config.rs  i3.rs  macros.rs  main.rs  output.rs  scheduler.rs
src/app/: i3.rs  macros.rs  mod.rs  output.rs  scheduler.rs  util.rs
src/widget/: battery.rs  datetime.rs  focus.rs  mod.rs  scroll.rs  time.rs  toggle.rs
src/wm/: default.rs  dwm.rs  i3.rs  mod.rs
