[package]
name = "lostatus"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

[features]
debug = []
i3 = []
dwm = []

[dependencies]
serde = "^1.0.80"
serde_derive = "^1.0.80"
serde_json = "^1.0.33"
lazy_static = "*"
i3ipc = "^0.9.0"
x11 = { version = "2.18.1", features = ["xlib"] }

[[bin]]
name = "lostatus"
path = "src/bin.rs"
