[package]
name = "lostatus"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

[[bin]]
name = "lostatus"
path = "src/bin.rs"

[features]
debug = []
i3 = []
dwm = []

[dependencies]
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
lazy_static = "*"
i3ipc = "^0.9.0"
